# Prava-X

./: .gitignore  README.md  foundry.toml
frontend/: instrumentation.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/app/: page.tsx
frontend/app/components/app/: AppHeader.tsx  CreateIntent.tsx  Faucet.tsx  IntentBook.tsx  SolverPanel.tsx
frontend/app/components/landing/: Architecture.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Problem.tsx  TrackBadges.tsx
frontend/app/config/: contracts.ts  hooks.ts  wagmi.ts
frontend/app/config/abi/: SolverRegistry.json
frontend/app/providers/: Web3Provider.tsx
frontend/lib/: event-logger.ts
rust-privacy-engine/: .gitignore  Cargo.toml  build.rs  riscv64emac-unknown-none-polkavm.json
rust-privacy-engine/.cargo/: config.toml
rust-privacy-engine/src/: rust-privacy-engine.rs
script/: Deploy.s.sol
solver/: package-lock.json  package.json  tsconfig.json
solver/src/: api.ts  config.ts  executor.ts  index.ts  intent-pool.ts  price.ts  types.ts
solver/src/abi/: IntentReactor.json
solver/src/scripts/: create-intent.ts
src/: EscrowVault.sol  IntentReactor.sol  SolverRegistry.sol
src/interfaces/: IERC20Asset.sol  IPrivacyEngine.sol  ISystem.sol  IXcm.sol
src/libraries/: IntentLib.sol
src/test/: MockERC20.sol
